--- a/old-README.org
+++ b/old-README.org
@@ -1,3 +1,5 @@
+#+OPTIONS: num:nil toc:nil
+
 * About
 Usual Pastebin with scalable implementation and protection against malicious use through intuition detection 
 ** Installation
